--- a/Sentiment_Analysis_on_IMDB_Dataset.ipynb
+++ b/Sentiment_Analysis_on_IMDB_Dataset.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPNdvAMjPMO/x100XbFiShw"
     },
     "kernelspec": {
       "name": "python3",
@@ -3486,7 +3487,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 477
+          "height": 457
         },
         "id": "02ovHjkt0Qpo",
         "outputId": "a88d0599-f5dc-49f5-e3d1-6a1e9dac118a"
@@ -3825,19 +3826,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E5HX7rT1-qbd",
-        "outputId": "ee71a429-8b8a-414c-8b57-3cb5a3dfaabc"
+        "outputId": "3598cebe-5706-4ca3-80a5-f458d2e6fe2b"
       },
-      "execution_count": 49,
+      "execution_count": 50,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "\n",
-            "Enter a movie review (or type 'exit' to quit): This movie was absolutely fantastic! The acting was top-notch, the plot kept me engaged from start to finish, and the visuals were stunning. Highly recommend it to everyone!\n",
+            "Enter a movie review (or type 'exit' to quit): That was a good movie\n",
             "Predicted Sentiment: Positive\n",
             "\n",
-            "Enter a movie review (or type 'exit' to quit): The film was a complete disappointment. The storyline was predictable and boring, the characters lacked depth, and the pacing was way too slow. I wouldn’t watch it again.\n",
+            "Enter a movie review (or type 'exit' to quit): That was disappointing plot\n",
             "Predicted Sentiment: Negative\n",
             "\n",
             "Enter a movie review (or type 'exit' to quit): exit\n"
